--- a/ToDo.txt
+++ b/ToDo.txt
@@ -2,3 +2,7 @@
 Initialy thought that PP wouldnt really be a factor to consider but was proved wrong today.
 Will need to implement tracking of PP.
 The issue is that the data that is sent only includes the pp of the active pokemon.
+
+1/23/2024
+Tried adding a PP tracker to the game state that tracks the PP of the active pokemon.
+Played a few games and this semmed good for now,  but will do more testing to see if this is enough or if tracking is necessary for all pokemon.
