Adjust damage caculations to use worst case result

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -15,3 +15,7 @@ A current behaviour of the AI that is odd is that it will sometimes use a healin
 
 2/10/2024
 Added tracking of enemy stat boosts.
+
+2/10/2024
+Adjust damage calcualtions to use worse case result. When an array of damage numbers is returned the AI will assume worse case now as opposed to using the median result.
+When an enemy move is calculated it will use the higheest value and when the AI move is calculated it will use the lowest value.
