Removed redundant functions

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -29,3 +29,6 @@ Added JSDoc parameter descriptions
 2/14/2024
 Added more JSDoc for almost everything
 Might need to change the battlemangager to include the current data as the gameState instaed of keeping a seperate current gameState.
+
+2/14/2024
+Tried including all information in the current gameState. Removed redundant functions.
