--- a/ToDo.txt
+++ b/ToDo.txt
@@ -32,3 +32,7 @@ Might need to change the battlemangager to include the current data as the gameS
 
 2/14/2024
 Tried including all information in the current gameState. Removed redundant functions.
+
+2/17/2024
+Moved simulation of moves to the gameState class and included move priority and enemy switching in simulation. 
+If the Ai's move has higher priority it goes first else the enemy goes first.
