Moved pp tracking to the myPokemon class

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -39,3 +39,8 @@ If the Ai's move has higher priority it goes first else the enemy goes first.
 
 2/17/2024
 Fixed bug where move was not being selected when only one option was available
+
+2/18/2024
+Moved pp tracking to the myPokemon class. Also updated node.js to version 18. This caused a bug that was fixed by adding an extra line in main.js found https://github.com/node-fetch/node-fetch/issues/1624.
+Updating to the never version was to use structuredClone() because I thought it would clone methods. It does not clone methods :( .
+Next need to seperate the classes into different files and start tracking stat boosts for the AI.
