--- a/ToDo.txt
+++ b/ToDo.txt
@@ -52,3 +52,7 @@ Discovered odd bug where pp is: pp: [ 16, 15, 13, 31, '-1': 24 ] for some reason
 2/24/2024
 Moved gameState, myPokemon and enemyPokemon classes to separate files.
 Added simulation of stat boosts from moves to the simulation.
+
+2/25/2024
+Commented out some debugging console statements.
+Resets bot state after a battle is over.
