--- a/ToDo.txt
+++ b/ToDo.txt
@@ -79,3 +79,6 @@ Command to use is: jsdoc -c "path\to\config.json" -d docs
 3/4/2024
 Added a transposition table.
 Uses object-hash. Still need to implement it in Alpha Beta
+
+3/4/2024
+Tried updating the table to account for collisions
