--- a/ToDo.txt
+++ b/ToDo.txt
@@ -90,3 +90,6 @@ Changed it to use Map.
 Implemented to transposition table into Alpha - Beta.
 Based on psuedocode in https://webdocs.cs.ualberta.ca/~tony/OldPapers/icca.Mar1986.pp3-18.pdf
 Added code for tracking the time taken for moves and storing them in a file. Can be used to tracking the improvement gained from a transposition table.
+
+3/6/2024
+Moved time files to their own directory and ran some tests.
