Updated to use depth defined in config.
Still need to change file name based on depth.

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -112,3 +112,7 @@ Did more testing and added saving of replays after battle.
 Added the option to use transpotion table and move ordring in config file.
 Automatically writes time to the correct file.
 Still need to enable setting depth in config.
+
+3/20/2024
+Updated to use depth defined in config.
+Still need to change file name based on depth.
