--- a/ToDo.txt
+++ b/ToDo.txt
@@ -124,3 +124,7 @@ Added changes to file name based on settings.
 3/31/2024
 Updated previous log file to use current naming convention and added python file used for visualizing and comparing the data.
 Also made sure new files are txt.
+
+3/31/2024
+Did more tests with stochastic simulation.
+Changed name of basic version to more appropriate name in log files.
