Did testing at depth 2.
Also did the visualization.
Still need to do depth 6.

--- a/PokeEnvPython.ipynb
+++ b/PokeEnvPython.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,6 +74,136 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_team_2 = \"\"\"\n",
+    "Tyranitar-Mega @ Tyranitarite  \n",
+    "Ability: Sand Stream  \n",
+    "EVs: 252 HP / 184 Atk / 24 Def / 32 SpD / 16 Spe  \n",
+    "Adamant Nature  \n",
+    "- Stealth Rock  \n",
+    "- Crunch  \n",
+    "- Pursuit  \n",
+    "- Superpower  \n",
+    "\n",
+    "Suicune @ Leftovers  \n",
+    "Ability: Pressure  \n",
+    "EVs: 252 HP / 16 SpD / 240 Spe  \n",
+    "Calm Nature  \n",
+    "IVs: 0 Atk  \n",
+    "- Substitute  \n",
+    "- Calm Mind  \n",
+    "- Protect  \n",
+    "- Scald  \n",
+    "\n",
+    "Serperior @ Leftovers  \n",
+    "Ability: Contrary  \n",
+    "EVs: 56 HP / 200 SpA / 252 Spe  \n",
+    "Timid Nature  \n",
+    "IVs: 0 Atk / 30 SpA / 30 Spe  \n",
+    "- Glare  \n",
+    "- Substitute  \n",
+    "- Leaf Storm  \n",
+    "- Hidden Power [Fire]  \n",
+    "\n",
+    "Talonflame @ Leftovers  \n",
+    "Ability: Gale Wings  \n",
+    "EVs: 248 HP / 8 Def / 252 SpD  \n",
+    "Careful Nature  \n",
+    "- Will-O-Wisp  \n",
+    "- Bulk Up  \n",
+    "- Roost  \n",
+    "- Brave Bird  \n",
+    "\n",
+    "Gastrodon @ Leftovers  \n",
+    "Ability: Storm Drain  \n",
+    "EVs: 252 HP / 252 Def / 4 SpD  \n",
+    "Relaxed Nature  \n",
+    "- Earthquake  \n",
+    "- Recover  \n",
+    "- Curse  \n",
+    "- Scald  \n",
+    "\n",
+    "Excadrill @ Leftovers  \n",
+    "Ability: Sand Rush  \n",
+    "EVs: 88 HP / 16 Def / 252 SpD / 152 Spe  \n",
+    "Careful Nature  \n",
+    "- Toxic  \n",
+    "- Rapid Spin  \n",
+    "- Iron Head  \n",
+    "- Earthquake  \n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_team_3 = \"\"\"\n",
+    "Garchomp @ Garchompite  \n",
+    "Ability: Rough Skin  \n",
+    "EVs: 252 Atk / 4 SpA / 252 Spe  \n",
+    "Adamant Nature  \n",
+    "- Fire Blast  \n",
+    "- Swords Dance  \n",
+    "- Stone Edge  \n",
+    "- Earthquake  \n",
+    "\n",
+    "Tyranitar @ Smooth Rock  \n",
+    "Ability: Sand Stream  \n",
+    "EVs: 252 HP / 4 Def / 252 SpD  \n",
+    "Sassy Nature  \n",
+    "- Stealth Rock  \n",
+    "- Ice Beam  \n",
+    "- Pursuit  \n",
+    "- Stone Edge  \n",
+    "\n",
+    "Excadrill @ Leftovers  \n",
+    "Ability: Sand Rush  \n",
+    "EVs: 164 Atk / 176 SpD / 168 Spe  \n",
+    "Adamant Nature  \n",
+    "- Substitute  \n",
+    "- Iron Head  \n",
+    "- Earthquake  \n",
+    "- Swords Dance  \n",
+    "\n",
+    "Slowbro @ Leftovers  \n",
+    "Ability: Regenerator  \n",
+    "EVs: 252 HP / 252 Def / 4 SpD  \n",
+    "Bold Nature  \n",
+    "IVs: 0 Atk  \n",
+    "- Slack Off  \n",
+    "- Toxic  \n",
+    "- Flamethrower  \n",
+    "- Scald  \n",
+    "\n",
+    "Amoonguss @ Black Sludge  \n",
+    "Ability: Regenerator  \n",
+    "EVs: 252 HP / 92 Def / 156 SpD / 8 Spe  \n",
+    "Calm Nature  \n",
+    "IVs: 0 Atk / 30 SpA / 30 Spe  \n",
+    "- Hidden Power [Fire]  \n",
+    "- Giga Drain  \n",
+    "- Spore  \n",
+    "- Clear Smog  \n",
+    "\n",
+    "Skarmory @ Rocky Helmet  \n",
+    "Ability: Sturdy  \n",
+    "EVs: 252 HP / 252 Def / 4 SpD  \n",
+    "Impish Nature  \n",
+    "- Defog  \n",
+    "- Roost  \n",
+    "- Whirlwind  \n",
+    "- Iron Head  \n",
+    "\"\"\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -82,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,6 +238,21 @@
     "\n",
     "    # Sending challenges to 'your_username'\n",
     "for i in range(number_of_battles):\n",
+    "    if i == 2:\n",
+    "        player = RandomPlayer(\n",
+    "            battle_format=\"gen6ou\",\n",
+    "            team=my_team_2,\n",
+    "            account_configuration=AccountConfiguration(\"testranod6969\", \"12345\"),\n",
+    "            server_configuration=LocalhostServerConfiguration\n",
+    "        )\n",
+    "    if i == 4:\n",
+    "        player = RandomPlayer(\n",
+    "            battle_format=\"gen6ou\",\n",
+    "            team=my_team_3,\n",
+    "            account_configuration=AccountConfiguration(\"testranod6969\", \"12345\"),\n",
+    "            server_configuration=LocalhostServerConfiguration\n",
+    "        )\n",
+    "\n",
     "    await player.send_challenges(\"randobot1234\", n_challenges=1)\n",
     "    await toWait()"
    ]
@@ -121,9 +266,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Player testranod6969 won 0 out of 1 played\n",
+      "battle-gen6ou-864 False\n"
+     ]
+    }
+   ],
    "source": [
     "# n_won_battles and n_finished_battles\n",
     "\n",
@@ -146,7 +300,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.5"
   }
  },
