--- a/ToDo.txt
+++ b/ToDo.txt
@@ -145,3 +145,8 @@ Made boxplot look good.
 4/4/2024
 Added poke-env python notebook to play against the bot.
 Now connecting to local server for playing against bots, so disabled saving replays.
+
+4/5/2024
+Did testing at depth 2.
+Also did the visualization.
+Still need to do depth 6.
