--- a/ToDo.txt
+++ b/ToDo.txt
@@ -169,3 +169,7 @@ Added checking if the only move left is struggle.
 4/8/2024
 Moved all teams to the Teams folder.
 Added a few more teams for Gen5 OU from https://www.smogon.com/forums/threads/bw-ou-samples-thread.3686880/.
+
+4/8/2024
+Added checking if the move is disabled for hidden power.
+Added checking if the pokemon is trapped and cannot switch out.
